# solara-codex-foundry

./: DEBRIEF.md  PLAN.md  README.md  pyproject.toml
app/: __init__.py
app/primary_credit_app/: __init__.py
app/primary_credit_app/components/: chat.py  header.py  panels.py  sidebar.py
app/primary_credit_app/core/: optional_dependencies.py  state.py
app/primary_credit_app/pages/: main.py
app/primary_credit_app/services/: __init__.py  credentials.py  logging.py  telemetry.py
app/src/: chat.py
app/tests/: test_chat_components.py
codex/: config.toml
codex/prompts/: bootstrap.md  chat_requirements.md  first_principles_playbook.md
docs/: PRD.md  chat-table-rerender-guide.md
docs/solara-notes/: component-lifecycle.md  lists-and-streaming.md  native-chat-review.md  rendering-pipeline.md  state-primitives.md
ipyaggrid/: __init__.py
solara/: __init__.py
solara/lab/: __init__.py
solara/lab/components/: __init__.py  chat.py
solara/labs/: __init__.py  headers.py
src/app/: __init__.py  apps.py
src/app/backend/: README.md  __init__.py
src/app/core/: __init__.py  gates.py  pandas_compat.py  pandas_stub.py  styles.py
src/app/models/: __init__.py  app.py  chat.py  dataset.py
src/app/services/: api.py  attestation.py  tasks.py  (+4 more)
src/solara_codex_foundry/: __init__.py
storage/: attestation_state.json  prompt_suggestions.json
tests/: conftest.py  test_chat_components.py
tests/backend/: test_pandas_ai_patches.py  test_pandas_ai_pipeline.py  test_pandas_ai_response_parser.py
tests/services/: test_credentials.py  test_logging.py  test_storage.py
(+41 files in other folders)
